# poetry_sample

./: BasicUsage_memo.md  README.md  cli_memo.md  memo.md
poetry-demo/: pyproject.toml
poetry-demo/poetry_demo/: main.py
