[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["k_yamanaka <vaivailx+git@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
my-scripts = "poetry_demo.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
